--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,8 +17,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
             <!-- Tarjeta de Bienvenida -->
             <androidx.cardview.widget.CardView
@@ -32,12 +32,12 @@
                     android:id="@+id/tvWelcome"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/abril_fatface_regular"
                     android:padding="16dp"
                     android:text="Bienvenido"
                     android:textAlignment="center"
-                    android:textSize="20sp"
                     android:textColor="@color/app_fondo"
-                    android:fontFamily="@font/abril_fatface_regular"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
             </androidx.cardview.widget.CardView>
 
@@ -54,69 +54,69 @@
                 style="@style/Widget.Material3.Button.OutlinedButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:backgroundTint="@color/app_morado"
                 android:text="Ver todo"
                 android:textColor="@color/white"
-                android:layout_marginBottom="12dp"
                 app:icon="@drawable/ic_all"
-                app:iconPadding="8dp"
                 app:iconGravity="textStart"
-                app:iconTint="@color/white"
-                android:backgroundTint="@color/app_morado" />
+                app:iconPadding="8dp"
+                app:iconTint="@color/white" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnPeces"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Comida para peces"
                 android:layout_marginBottom="12dp"
+                android:backgroundTint="@color/app_naranja"
+                android:text="Comida para peces"
                 app:icon="@drawable/ic_fish"
-                app:iconPadding="8dp"
                 app:iconGravity="textStart"
-                android:backgroundTint="@color/app_naranja" />
+                app:iconPadding="8dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnIluminacion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Iluminación"
                 android:layout_marginBottom="12dp"
+                android:backgroundTint="@color/app_naranja"
+                android:text="Iluminación"
                 app:icon="@drawable/ic_light"
-                app:iconPadding="8dp"
                 app:iconGravity="textStart"
-                android:backgroundTint="@color/app_naranja" />
+                app:iconPadding="8dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnFiltros"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Filtros"
                 android:layout_marginBottom="12dp"
+                android:backgroundTint="@color/app_naranja"
+                android:text="Filtros"
                 app:icon="@drawable/ic_filter"
-                app:iconPadding="8dp"
                 app:iconGravity="textStart"
-                android:backgroundTint="@color/app_naranja" />
+                app:iconPadding="8dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnAcuarios"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Acuarios"
                 android:layout_marginBottom="12dp"
+                android:backgroundTint="@color/app_naranja"
+                android:text="Acuarios"
                 app:icon="@drawable/ic_aquarium"
-                app:iconPadding="8dp"
                 app:iconGravity="textStart"
-                android:backgroundTint="@color/app_naranja" />
+                app:iconPadding="8dp" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnPlantas"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Plantas"
                 android:layout_marginBottom="12dp"
+                android:backgroundTint="@color/app_naranja"
+                android:text="Plantas"
                 app:icon="@drawable/ic_plant"
-                app:iconPadding="8dp"
                 app:iconGravity="textStart"
-                android:backgroundTint="@color/app_naranja" />
+                app:iconPadding="8dp" />
         </LinearLayout>
     </ScrollView>
 
@@ -125,10 +125,10 @@
         android:id="@+id/tvCopyright"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="© 2025 Pedro Sirvas. Todos los derechos reservados."
-        android:textSize="12sp"
-        android:textColor="@color/app_morado"
         android:gravity="center"
         android:paddingTop="12dp"
-        android:paddingBottom="4dp" />
+        android:paddingBottom="4dp"
+        android:text="© 2025 Pedro Sirvas. Todos los derechos reservados."
+        android:textColor="@color/app_morado"
+        android:textSize="12sp" />
 </LinearLayout>
