--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:orientation="vertical"
-    android:padding="16dp"
-    android:background="@android:color/white">
+    android:padding="16dp">
 
     <!-- Título -->
     <TextView
@@ -12,11 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="Mis órdenes"
-        android:textSize="24sp"
-        android:textStyle="bold"
         android:fontFamily="@font/abril_fatface_regular"
-        android:textColor="@color/app_fondo" />
+        android:text="Mis órdenes"
+        android:textColor="@color/app_fondo"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <!-- Contenedor para la lista y el mensaje vacío -->
     <FrameLayout
@@ -35,10 +35,10 @@
             android:id="@+id/tvEmptyOrders"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="No tienes órdenes registradas"
-            android:visibility="gone"
-            android:textSize="16sp"
             android:textColor="@android:color/darker_gray"
-            android:layout_gravity="center" />
+            android:textSize="16sp"
+            android:visibility="gone" />
     </FrameLayout>
 </LinearLayout>
