--- a/app/src/main/res/layout/item_carousel_image.xml
+++ b/app/src/main/res/layout/item_carousel_image.xml
@@ -7,6 +7,6 @@
         android:id="@+id/imageViewCarousel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitCenter"
-        android:contentDescription="Imagen del carrusel" />
+        android:contentDescription="Imagen del carrusel"
+        android:scaleType="fitCenter" />
 </FrameLayout>
