--- a/app/src/main/res/layout/item_category_header.xml
+++ b/app/src/main/res/layout/item_category_header.xml
@@ -7,4 +7,5 @@
     android:padding="8dp"
     android:text="Categoría"
     android:textSize="18sp"
-    android:textStyle="bold" />
+    android:textStyle="bold"
+    android:fitsSystemWindows="true"/>
