--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:paddingBottom="24dp"
+    android:fitsSystemWindows="true"
     tools:context=".fragments.ProductDetailFragment">
 
     <LinearLayout
